--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.6.2"
+  },
+  "dependencies": {
+    "cypress-plugin-api": "^2.11.1"
   }
 }
