--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress": "^13.6.2"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "cypress-plugin-api": "^2.11.1"
   }
 }
